# timer

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
example/: CMakeLists.txt  main.c  main.cpp  timer.hpp
example/c/: main.c
example/c++/: main.cpp  timer.cpp  timer.hpp
example/cmake/: add_example.cmake
glug_timer/: CMakeLists.txt  bsd.cmake  common_src.cmake  jni.cmake  linux.cmake  osx.cmake  windows.cmake
glug_timer/cmake/: add_gluglib.cmake  config.cmake.in  detect_os.cmake  link_libs.cmake  os.cmake  set_compilation_props.cmake  version.cmake
glug_timer/include/glug/: timer.h
glug_timer/include/glug/timer/: continuous_timer.h  continuous_timer_t.h  time.h  time_t.h  timer.h  timer_state.h  timer_t.h  uptime_timer.h  uptime_timer_t.h  version.h.in
glug_timer/include/glug/timer/bindings/c++/: continuous_timer.hpp  continuous_timer.inl  uptime_timer.hpp  uptime_timer.inl
glug_timer/include/glug/timer/bindings/java/org/libglug/: Allocator.java  DefaultAllocator.java
glug_timer/include/glug/timer/bindings/java/org/libglug/timer/: ContinuousTimer.java  State.java  Time.java  UptimeTimer.java
glug_timer/src/: continuous_timer.c  defs.h  frac.h  frac_t.h  safe_clock_scale.c  safe_clock_scale.h  tick.c  tick.h  time.c  timer.c  timer.h  timer_bridge_bsd.c  timer_bridge_linux.c  timer_bridge_macos.c  timer_bridge_null.c  timer_bridge_win32.c  timer_platform.h  uptime_timer.c
glug_timer/src/clock/: clock.c  clock.h
glug_timer/src/jni/: continuous_timer.cpp  jalloc_context_t.hpp  jni_onload.cpp  org_libglug_timer_ContinuousTimer.h  org_libglug_timer_UptimeTimer.h  uptime_timer.cpp
glug_timer/src/linux/: linux_timer.c
glug_timer/src/mach/: mach.c  mach.h
glug_timer/src/macos/: macos_timer.c
glug_timer/src/qpc/: qpc.c  qpc.h  quit.c  quit.h
glug_timer/src/win32/: win32_timer.c
test/: CMakeLists.txt  add_unit_test.cmake  bridge-bsd.cmake  bridge-linux.cmake  bridge-osx.cmake  bridge-win32.cmake  clock-linux.cmake  install_file_list.cmake  mach.cmake  test-install.cmake  tests.cmake  tick.cmake  timer-continuous.cmake
test/confs/: bridge-bsd.cmake  clock-bsd.cmake  qpc.cmake  quit.cmake  timer-uptime.cmake
test/suites/: asserts.c  asserts.h
test/suites/bridge/: bridge_osx - Copy.c  bsd-linux.c  bsd-linux.h  bsd.c  linux.c  osx.c  win32.c
test/suites/clock/: clock.c
test/suites/install/: install_file_list.cmake  test-install.cmake
test/suites/mach/: mach.c
test/suites/qpc/: qpc.c  quit.c
test/suites/tick/: tick.c
test/suites/timer/: continuous.c  uptime.c
test/suites/unit/: tick.c
test/test_utils/asserts/: clocktime.h  frac.h  time.c  time.h
test/test_utils/mocks/: tick.c  tick.h  time.c  time.h  timer_bridge.h
test/test_utils/mocks/allocator/: counted.c
test/test_utils/mocks/clock/: clock.c  clock.h
test/test_utils/mocks/glug/: allocator_t.h
test/test_utils/mocks/mach/: mach.c  mach.h  mach_time.c
test/test_utils/mocks/qpc/: qpc.c  qpc.h  quit.c
test/utils/asserts/: clocktime.c  frac.c  frac.h  time.c
test/utils/mocks/: Windows.c  Windows.h  timer_bridge.c
test/utils/mocks/allocator/: counted.h
test/utils/mocks/clock/: clock.c
test/utils/mocks/mach/: mach_time.c  mach_time.h
test/utils/mocks/qpc/: quit.h
